# mcp-outlook-tools

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ja.md  manifest.json  mcp-outlook-tools.dxt  pyproject.toml
src/outlook_search/: server.py
src/outlook_tools/: __init__.py  calendar_service.py  search_service.py  server.py
test/: retrieve_appointments.py  test_calendar_service.py
