[project]
name = "mcp-outlook-tools"
version = "0.1.0"
description = "MCP server for Outlook calendar and contact management"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pywin32>=305",
    "python-dateutil>=2.8.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outlook_tools"]

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]